--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
           <button class="btn zero" onclick="btnCal('0')">0</button>
           <button class="btn" onclick="btnCal('.')">.</button>
           <button class="btn operator" onclick="btnCal('+')">+</button>
-          <button class="btn equals" onclick="btnCal('=')">=</button>
-          <button class="btn" onclick="btnCal('C')">C</button>
-          <button class="btn" onclick="btnCal('CE')">CE</button>
+          <button class="btn equals" id="equalbtn" onclick="btnCal('=')">=</button>
+          <button class="btn" id="cbtn" onclick="btnCal('C')">C</button>
+          <button class="btn" id="cebtn" onclick="btnCal('CE')">CE</button>
         </div>
       </div>
     </div>
-
+    
     <script src="app.js"></script>
   </body>
 </html>
