--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="calculator-container">
       <h1 class="heading">Calculator:</h1>
       <div class="calculator">
-        <input type="text" class="display" id="calculate">
+        <input type="text" class="display" id="calculate" disabled>
 
         <div class="buttons">
           <button class="btn" onclick="btnCal('7')">7</button>
